tests/snapshots/tui_snapshot__tui_input_multi_line.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)

  Welcome to Pi! Type a message to begin, or /help for commands.

  [multi-line] Alt+Enter to send (Enter: newline, Esc: single-line)
    > first line
  > second line
  >
  >
  >
  >

  Tokens: 0 in / 0 out  |  Enter: newline  |  Alt+Enter: send  |  Esc: single-line  |  /help  |  Ctrl+C: quit
