tests/snapshots/tui_snapshot__tui_multi_turn_conversation.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)


  Assistant:

    Hello!



  You: How are you?

  Assistant:

    Doing great, thanks.


  [100%] ↑/↓ PgUp/PgDn to scroll

  [single-line] Enter to send (Shift+Enter for newline)
    > Type your message... (Enter to send, Shift+Enter for newline, Ctrl+C twice to quit)
  >
  >

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  /help  |  Ctrl+C: quit
