tests/snapshots/tui_snapshot__tui_scrolled_viewport.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)

  Assistant:

    Assistant reply 9



  You: User message 10

  Assistant:

    Assistant reply 10



  You: User message 11
  [82%] ↑/↓ PgUp/PgDn to scroll

  [single-line] Enter to send (Shift+Enter for newline)
    > Type your message... (Enter to send, Shift+Enter for newline, Ctrl+C twice to quit)
  >
  >

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  /help  |  Ctrl+C: quit
