tests/snapshots/tui_snapshot__tui_single_user_message.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)


  You: Hello, Pi!

  [single-line] Enter to send (Shift+Enter for newline)
    > Type your message... (Enter to send, Shift+Enter for newline, Ctrl+C twice to quit)
  >
  >

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  /help  |  Ctrl+C: quit
